--- a/projects.html
+++ b/projects.html
@@ -21,29 +21,29 @@
         <div class="slider">
             <button class="arrow left" onclick="prevSlide()">&#8592;</button>
             <div class="slides">
-              <img src="images/Case din lemn/01_Case de vacanta/casa_terminata.jpg" alt="Image 1" />
-              <img src="images/Case din lemn/02_Casa de vacanta Bucuresti/casa_terminata.jpg" alt="Image 2" />
-              <img src="images/Case din lemn/03_Casa rezidentiala pe structura de lemn Irina/casa_terminata.jpg" alt="Image 3" />
-              <img src="images/Case din lemn/04_Casa rezidentiala pe structura de lemn Razvan/casa_terminata.jpg" alt="Image 4" />
-              <img src="images/Case din lemn/05_Casa rezidentiala pe structura de lemn Bucuresti/casa_terminata.jpg" alt="Image 5" />
-              <img src="images/Case din lemn/06_Casa de vacanta Poiana/casa_terminata.jpg" alt="Image 6" />
-              <img src="images/Case din lemn/07_Casa de Vacanta Bacau/casa_terminata.jpg" alt="Image 7" />
-              <img src="images/Constructii rezidentiale/03_Garaj BCA Placat cu lambriu/casa_terminata.jpg" alt="Image 8" />
-              <img src="images/Constructii rezidentiale/05_Constructie P+M boltari/casa_terminata.jpg" alt="Image 9" />
+              <img src="/images/Case din lemn/01_Case de vacanta/casa_terminata.jpg" alt="Image 1" />
+              <img src="/images/Case din lemn/02_Casa de vacanta Bucuresti/casa_terminata.jpg" alt="Image 2" />
+              <img src="/images/Case din lemn/03_Casa rezidentiala pe structura de lemn Irina/casa_terminata.jpg" alt="Image 3" />
+              <img src="/images/Case din lemn/04_Casa rezidentiala pe structura de lemn Razvan/casa_terminata.jpg" alt="Image 4" />
+              <img src="/images/Case din lemn/05_Casa rezidentiala pe structura de lemn Bucuresti/casa_terminata.jpg" alt="Image 5" />
+              <img src="/images/Case din lemn/06_Casa de vacanta Poiana/casa_terminata.jpg" alt="Image 6" />
+              <img src="/images/Case din lemn/07_Casa de Vacanta Bacau/casa_terminata.jpg" alt="Image 7" />
+              <img src="/images/Constructii rezidentiale/03_Garaj BCA Placat cu lambriu/casa_terminata.jpg" alt="Image 8" />
+              <img src="/images/Constructii rezidentiale/05_Constructie P+M boltari/casa_terminata.jpg" alt="Image 9" />
             </div>
             <button class="arrow right" onclick="nextSlide()">&#8594;</button>
           </div>
         
           <div class="thumbnails-container">
-            <img src="images/Case din lemn/01_Case de vacanta/casa_terminata.jpg" onclick="goToSlide(0)" />
-            <img src="images/Case din lemn/02_Casa de vacanta Bucuresti/casa_terminata.jpg" onclick="goToSlide(1)" />
-            <img src="images/Case din lemn/03_Casa rezidentiala pe structura de lemn Irina/casa_terminata.jpg" onclick="goToSlide(2)" />
-            <img src="images/Case din lemn/04_Casa rezidentiala pe structura de lemn Razvan/casa_terminata.jpg" onclick="goToSlide(3)" />
-            <img src="images/Case din lemn/05_Casa rezidentiala pe structura de lemn Bucuresti/casa_terminata.jpg" onclick="goToSlide(4)" />
-            <img src="images/Case din lemn/06_Casa de vacanta Poiana/casa_terminata.jpg" onclick="goToSlide(5)" />
-            <img src="images/Case din lemn/07_Casa de Vacanta Bacau/casa_terminata.jpg" onclick="goToSlide(6)" />
-            <img src="images/Constructii rezidentiale/03_Garaj BCA Placat cu lambriu/casa_terminata.jpg" onclick="goToSlide(7)" />
-            <img src="images/Constructii rezidentiale/05_Constructie P+M boltari/casa_terminata.jpg" onclick="goToSlide(8)" />
+            <img src="/images/Case din lemn/01_Case de vacanta/casa_terminata.jpg" onclick="goToSlide(0)" />
+            <img src="/images/Case din lemn/02_Casa de vacanta Bucuresti/casa_terminata.jpg" onclick="goToSlide(1)" />
+            <img src="/images/Case din lemn/03_Casa rezidentiala pe structura de lemn Irina/casa_terminata.jpg" onclick="goToSlide(2)" />
+            <img src="/images/Case din lemn/04_Casa rezidentiala pe structura de lemn Razvan/casa_terminata.jpg" onclick="goToSlide(3)" />
+            <img src="/images/Case din lemn/05_Casa rezidentiala pe structura de lemn Bucuresti/casa_terminata.jpg" onclick="goToSlide(4)" />
+            <img src="/images/Case din lemn/06_Casa de vacanta Poiana/casa_terminata.jpg" onclick="goToSlide(5)" />
+            <img src="/images/Case din lemn/07_Casa de Vacanta Bacau/casa_terminata.jpg" onclick="goToSlide(6)" />
+            <img src="/images/Constructii rezidentiale/03_Garaj BCA Placat cu lambriu/casa_terminata.jpg" onclick="goToSlide(7)" />
+            <img src="/images/Constructii rezidentiale/05_Constructie P+M boltari/casa_terminata.jpg" onclick="goToSlide(8)" />
           </div>
           <p class="introducere_1"><a href="casa_de_lemn.html">Proiect 1 - Casă de Lemn:</a></p>
           <p class="introducere_1"><a href="constructii_rezidentiale.html">Proiect 2 - Construcții Rezidențiale:</a></p>
